# fishfry-tours

./: Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
fishfry/: Procfile  alembic.ini  package-lock.json  pyproject.toml  requirements.txt
fishfry-tours/: package-lock.json  package.json
fishfry-tours/src/: App.js  BoatCardList.js  PageFooter.js
fishfry/.github/workflows/: main.yml
fishfry/alembic/: env.py
fishfry/alembic/versions/: 1e82fb941605_initial_boat_data_import.py  34eee32a7aaf_add_unique_constraint_name.py  51919f01f049_new_boat_table.py
fishfry/fishfry/: README.md  base.py  initial_data.json  schema.py  sqlamodels.py  strawview.py  webapp.py
fishfry/tests/: conftest.py  test_fishfry.py
